syntax = "proto3";
option csharp_namespace = "PlatformsAPI";

service GetPlatforms{
    rpc GetAll (GrpcInput) returns (GrpcResponse);
}
message GrpcInput {}

message GrpcPlatformModel {
    int32 id = 1;
    string name = 2;
    string publisher = 3;
}

message GrpcResponse{
    repeated GrpcPlatformModel platforms = 1;
}
